# AnimeTagger

./: .gitignore  .gitmodules  Dockerfile  README.md  TODO.md  aidmatch.py  fetchvids.py  models.py  pyproject.toml  server.py  tagger.py
.mypy_cache/3.7/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  io.meta.json  mmap.meta.json  posix.meta.json  socket.data.json  socket.meta.json  ssl.data.json  ssl.meta.json  string.meta.json  sys.meta.json  tagger.data.json  tagger.meta.json  threading.meta.json  time.data.json  time.meta.json  types.meta.json  typing.meta.json
.mypy_cache/3.7/collections/: __init__.meta.json  abc.meta.json
.mypy_cache/3.7/email/: __init__.data.json  __init__.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
.mypy_cache/3.7/http/: __init__.data.json  __init__.meta.json  client.data.json  client.meta.json  cookiejar.data.json  cookiejar.meta.json
.mypy_cache/3.7/importlib/: __init__.meta.json  abc.meta.json  machinery.meta.json  util.meta.json
.mypy_cache/3.7/logging/: __init__.data.json  __init__.meta.json
.mypy_cache/3.7/os/: __init__.meta.json  path.meta.json
.mypy_cache/3.7/requests/: __init__.data.json  __init__.meta.json  adapters.data.json  adapters.meta.json  (+22 more)
api/: __init__.py  acoustid.py  genius.py  vgmdb.py
scripts/: download_vids.sh  fetch_vids.sh  get_vid_health.sh
utils/: aidmatch.py  clean_text.py  console.py  database.py  google_drive.py  image_handler.py  text_processing.py
(+8 files in other folders)
