[tool.poetry]
name = "animetagger"
version = "0.1.0"
description = "Automatically tags anime songs with relevant metadata"
authors = ["samyak-jain <samtan106@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
tenacity = "^5.0"
aiohttp = "^3.5"
tqdm = "^4.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
