[tool.poetry]
name = "animetagger"
version = "0.1.0"
description = "Automatically tags anime songs with relevant metadata"
authors = ["samyak-jain <samtan106@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
tenacity = "^5.0"
aiohttp = "^3.5"
tqdm = "^4.31"
eyed3 = "^0.8.10"
python-dotenv = "^0.10.1"
pydantic = "^0.24.0"
youtube-dl = "^2019.4"
pyicu = "^2.3"
polyglot = "^16.7"
pycld2 = "^0.31.0"
pymongo = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
